# readme-credly-badges

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yaml  compose.yaml  noxfile.py  pyproject.toml  release_notes.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/workflows/: changelog.yaml  ci.yml  labels.yml  pre-commit.yaml  release.yaml  release.yml  stale.yml  tests.yaml
changelog.d/: 21.docs.md  24.docs.md  33.added.md  33.changed.md  33.removed.md  34.changed.md  35.changed.rst  40.added.rst  40.changed.rst  41.security.rst  7.feature.md
docs/: changelog.md  contributing.md
scripts/: bump2version.py  update_version.py
src/: credly.py  exceptions.py  gitrepo.py  main.py  settings.py  utils.py
src/readme_credly_badges/: entrypoint.py  settings.py  utils.py
src/readme_credly_badges/adapter/: __init__.py  credly.py  github_repo.py
tests/: test_credly.py  test_entrypoint.py  test_gitrepo.py  test_main.py  test_utils.py
