[project]
name = "readme-credly-badges"
version = "v1.2.0"
description = "A Python GitHub Action to add Credly badges to README or any other markdown file from your Credly account."
readme = "README.md"
keywords = []
license = "MIT"
authors = [
    { name = "Jitesh Sahani (JD)", email = "jitesh.sahani@outlook.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pygithub>=2.6.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "toml",
]
type = []

[project.urls]
Documentation = "https://github.com/jd-35656/readme-credly-badges#readme"
Issues = "https://github.com/jd-35656/readme-credly-badges/issues"
Source = "https://github.com/jd-35656/readme-credly-badges"

[tool.ruff]
target-version = "py313"
line-length = 121
src = [
    "src",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C4",
    "C9",
    "DTZ",
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PYI",
    "Q",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"src/readme_credly_badges/adapter/github_repo.py" = [
    "PLR0913",
]
"tests/*" = [
    "N806",
    "S101",
    "S106",
]

[tool.ruff.lint.isort]
known-first-party = [
    "readme_credly_badges",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.codespell]
skip = ".nox,.git,venv,__pycache__,.mypy_cache,.ruff_cache"
check-hidden = true
quiet-level = 2

[tool.pytest.ini_options]
minversion = "8.0"
log_cli = true
log_cli_level = "INFO"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source_pkgs = [
    "readme_credly_badges",
]
branch = true
parallel = true

[tool.coverage.paths]
readme_credly_badges = [
    "src/readme_credly_badges",
    "*/readme-credly-badges/src/readme_credly_badges",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 90

[tool.towncrier]
directory = "changelog.d"
filename = "docs/changelog.md"
package = "readme_credly_badges"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## [{version}](https://github.com/jd-35656/readme-credly-badges/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/jd-35656/readme-credly-badges/issues/{issue})"
underlines = [
    "",
    "",
    "",
]
type = [
    { name = "Security" },
    { name = "Removed" },
    { name = "Deprecated" },
    { name = "Added" },
    { name = "Changed" },
    { name = "Fixed" },
]

[tool.mypy]
files = [
    "src",
]
ignore_missing_imports = true
strict = true
